# duffbot

./: .dockerignore  .gitignore  LICENSE  Makefile  README.md  backend.dockerfile  docker-compose.yml  duffbot.yaml  nginx.conf  pyproject.toml  scoreboard.dockerfile
backend/: main.py  schemas.py
backend/routers/: chat.py  scoreboard.py
backend/services/: agent.py  tool.py
config/: settings.py
frontend/: gradio_app.py
scoreboard-fe/: .env.production  index.html  package-lock.json  package.json  vite.config.ts
scoreboard-fe/src/: App.css  App.tsx  index.css
tests/: test_chat.py
